2016-04-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Generalize procedure for installing manpages.

	* man/dirname.man: Rename it as...
	* man/dirname.3.man: ...this, with inherent MANSECT specification.
	(TH): Use %PAGEREF% substitution for NAME, MANSECT, and DATE.
	(MS-Windows): Do not append \[tm]; it doesn't render well in Windows
	console. Further, correct typos; some syntactic adjustments.

	* Makefile.in (%:%.man): New rule; define it.
	(%.mancopy, %.mancopy-recursive): New rules; define and use with...
	(reference_manpage): ...this new macro, defining it to map...
	(dirname.3.man): ...this as the reference source file for both of...
	(basename.3, dirname.3): ...these installed manpages.
	(format_manpage): Add MANSECT and DATE to expansion of...
	(%PAGEREF%): ...this sed substitution pattern.

2016-04-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update several incorrectly attributed header files.

	* include/direct.h include/io.h include/locale.h include/math.h
	* include/process.h include/stdio.h include/stdlib.h include/string.h
	* include/sys/stat.h include/sys/types.h include/time.h: Identify the
	original author as Colin Peters; Rob Savoye merely imported them into
	the original CVS repository, when he created it.

	* include/wchar.h: Likewise, imported by Rob Savoye, but the original
	source file is unattributed.

2016-04-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Eliminate all references to non-standard __NO_ISOCEXT macro.

	* include/math.h: Tidy layout.
	[!defined __NO_ISOCEXT]: Do not use this ugly double negative; in any
	case, we do not want to encourage users to define such implementation
	private macros; instead, prefer to make use of...
	[defined _ISOC99_SOURCE]: ...this glibc compatible feature test.
	[__STDC_VERSION__ >= 199901L]: Do not require this; it is implied, by
	definition, in _ISOC99_SOURCE.
	* include/stdio.h [!defined __NO_ISOCEXT]: Likewise; replace with...